Add Docker support and update environment configuration
- Introduced Dockerfile for the Python emotion server and the console UI.
- Created a docker-compose.yml file to manage services.
- Updated README.md with setup instructions and service details.
- Modified setup.sh to include Docker run commands.
- Simplified start.sh by removing unnecessary cleanup logic.
- Updated .env.example for better clarity on environment variables.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
+# Copy to .env and set your secrets
 OPENAI_API_KEY="<your-key-here>"
+
+# Optionally override ports
+# PORT=3000
+# FLASK_PORT=5001
