change setup scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
 
   console:
     build:
-      context: ./console/openai-realtime-console
+      context: .
       dockerfile: Dockerfile
     image: reachy2-console:local
     depends_on:
@@ -44,7 +44,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./console/openai-realtime-console/session_logs:/usr/src/app/session_logs
+      - ./session_logs:/usr/src/app/session_logs
     healthcheck:
       test: ["CMD-SHELL", "wget -qO- http://localhost:3000 || exit 1" ]
       interval: 10s
