--- a/.github/workflows/main_reachy2.yml
+++ b/.github/workflows/main_reachy2.yml
@@ -23,17 +23,25 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build client
         run: |
+          cd client
           npm install
-          npm run build --if-present
-          npm run test --if-present
-
+          npm run build
+          cd ..
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: |
+            server.js
+            package*.json
+            client/dist
+            public
+            data
+            tools
+
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +70,5 @@ jobs:
           app-name: 'reachy2'
           slot-name: 'Production'
           package: .
+
           
